@startuml
'https://plantuml.com/object-diagram

class Main {
    +int countLampsInBuilding(Building building)
    +boolean isNormalBuilding(Building building)
}

class Building {
    -ArrayList<Room> rooms «get»
    -int numberOfBathrooms «get»
    -int numberOfFloors «get»
    -boolean isOfficeBuilding «get»

    +Building(ArrayList<Room> rooms, int numberOfBathrooms, int numberOfFloors, boolean isOfficeBuilding)
}

class Room {
    -int numberOfDoors «get»
    -int numberOfLamps «get»
    -int numberOfWindows «get»

    +Room(int numberOfDoors, int numberOfLamps, int numberOfWindows)
}

Main *-- Building
Building *-- Room

@enduml
